--- a/src/Components/ActivitiesCard.css
+++ b/src/Components/ActivitiesCard.css
@@ -1,7 +1,6 @@
 #activitiesCard {
   margin: 0.5em;
   padding: 0.25em;
-  margin-right: 50%;
   margin-bottom: 2em;
   border: 1px solid lightgray;
 }
@@ -9,4 +8,17 @@
 .activitiesCardElements {
   text-align: left;
   margin-left: 0.5em;
+}
+#ActivityName {
+  font-size: medium;
+  color: blue;
+}
+
+#ActivtyNameTag {
+  font-size: large;
+  color: red;
+}
+
+#ActivtyDescriptionTag {
+  font-size: medium;
 }
